# Mesh_Reconstruction

./: .gitignore  CMakeLists.txt  FindEigen3.cmake  README.md  m_cubes.cpp  main.cpp  mesh_reconstruction.cpp  set_env.sh
Lempitsky Code/: ExtractSeparatingSurfaceCPU.m  ExtractSeparatingSurfaceGPU.m  FastPerim.cpp  FastPerim.mexw32  QPGPU.cu  QPGPU.mexw32  Readme.txt  RunQP.cpp~  RunQP.mexw32  license.txt
binvoxToPCL/: CMakeLists.txt  binvoxToPcl.cpp  binvoxToPcl.h  main.cpp
confidence_pcl/: CMakeLists.txt  Confidencor.h  ConstConf.cpp  ConstConf.h  GaussConf.cpp  GaussConf.h  assign_confidence.cpp  assign_confidence.h  full_confidence.cpp  full_confidence.h  main.cpp
distance_fields/: CMakeLists.txt  dfields.cpp  dfields.cu  dfields.h  main.cpp
grid/: CMakeLists.txt  grid.cpp  grid.h  main.cpp
marching_cubes/: CMakeLists.txt  hasher.cpp  hasher.h  main.cpp  mcubes.cpp  mcubes.h
narrow_band/: CMakeLists.txt  getsqdist.cpp  getsqdist.h  grid.cpp  grid.h  main.cpp  narrowBand.cpp  narrowBand.h
optimize/: CMakeLists.txt  CMakeLists.txt~  main.cpp  primeqp.cpp  primeqp.h  quadprog.cpp  quadprog.cu  quadprog.h
optimize_conf/: CMakeLists.txt  main.cpp  primeqp_conf.cpp  primeqp_conf.h  qp_conf.cpp  qp_conf.h
voxelize/: CMakeLists.txt  main.cpp  voxelize.cpp  voxelize.h
